chainsight-cdk-macros/src/canisters/snapshots/chainsight_cdk_macros__canisters__relayer__test__snapshot__relayer__with_lens.snap
---
source: chainsight-cdk-macros/src/canisters/relayer.rs
expression: formatted
---
use chainsight_cdk::rpc::{CallProvider, Caller, Message};
use chainsight_cdk::web3::Encoder;
use chainsight_cdk_macros::{
    chainsight_common, define_get_ethereum_address, define_transform_for_web3, define_web3_ctx,
    did_export, init_in, manage_single_state, relayer_source, setup_func, timer_task_func,
};
use ic_web3_rs::types::{Address, U256};
use std::str::FromStr;
did_export!("relayer");
chainsight_common!();
define_web3_ctx!();
define_transform_for_web3!();
manage_single_state!("target_addr", String, false);
define_get_ethereum_address!();
manage_single_state!("target_canister", String, false);
timer_task_func!("set_task", "index");
init_in!();
setup_func ! ({ target_addr : String , web3_ctx_param : chainsight_cdk :: web3 :: Web3CtxParam , target_canister : String , lens_targets : Vec < String > });
ic_solidity_bindgen::contract_abi!("__interfaces/Uint256Oracle.json");
use relayer::{filter, CallCanisterResponse};
manage_single_state!("lens_targets", Vec<String>, false);
type CallCanisterArgs = Vec<String>;
#[ic_cdk::query]
#[candid::candid_method(query)]
pub fn call_args() -> CallCanisterArgs {
    get_lens_targets()
}
relayer_source!("get_last_snapshot_value", "get_lens_targets");
#[ic_cdk::update]
#[candid::candid_method(update)]
async fn index() {
    if ic_cdk::caller() != proxy() {
        panic!("Not permitted");
    }
    let target_canister = candid::Principal::from_text(get_target_canister())
        .expect("Failed to parse to candid::Principal");
    let call_result = CallProvider::new()
        .call(
            Message::new::<CallCanisterArgs>(
                call_args(),
                _get_target_proxy(target_canister.clone()).await,
                "proxy_get_last_snapshot_value",
            )
            .expect("failed to create message"),
        )
        .await
        .expect("failed to call by CallProvider");
    let datum = call_result
        .reply::<CallCanisterResponse>()
        .expect("failed to get reply");
    ic_cdk::println!("response from canister = {:?}", datum.clone());
    if !filter(&datum) {
        return;
    }
    let w3_ctx_param = get_web3_ctx_param();
    let call_option_builder = chainsight_cdk::web3::EVMTransactionOptionBuilder::new(
        w3_ctx_param.url,
        w3_ctx_param.chain_id,
        w3_ctx_param.env.ecdsa_key_name(),
    );
    use chainsight_cdk::web3::TransactionOptionBuilder;
    let call_option = call_option_builder
        .build()
        .await
        .expect("Failed to build call_option");
    let result = Uint256Oracle::new(
        Address::from_str(&get_target_addr()).expect("Failed to parse target addr to Address"),
        &web3_ctx().expect("Failed to get web3_ctx"),
    )
    .update_state(
        chainsight_cdk::web3::abi::EthAbiEncoder.encode(datum.clone()),
        call_option,
    )
    .await
    .expect("Failed to call update_state for oracle");
    ic_cdk::println!("value_to_sync={:?}", result);
}

